# Taskspace

./: README.md
Taskspace/: CMakeLists.txt  Main.qml  localstorage.cpp  localstorage.h  main.cpp  weatherapi.cpp  weatherapi.h
Taskspace/icons/: taskspace.rc
Taskspace/qml/: AppData.qml  SideBarButton.qml  SideMenu.qml  qmldir
Taskspace/qml/Habits/: HabitButton.qml  HabitCategory.qml  HabitDialog.qml  HabitPart.qml  Habits.qml
Taskspace/qml/Tasks/: DatePick.qml  Tasks.qml
Taskspace/qml/Weather/: Weather.qml  WeatherAirConditionC.qml  WeatherChart.qml  WeatherDailySummartyC.qml  WeatherForecastC.qml
